--- a/dasarPemrogramanWeb/WebDasar/index.html
+++ b/dasarPemrogramanWeb/WebDasar/index.html
@@ -25,9 +25,13 @@
 
     <main>
       <div>
-        <article>
-          <h2 id="sejarah">Sejarah</h2>
-          <img src="assets/img/history.jpg" alt="foto sejarah" />
+        <article id="sejarah" class="card">
+          <h2>Sejarah</h2>
+          <img
+            src="assets/img/history.jpg"
+            alt="foto sejarah"
+            class="featured-image"
+          />
           <p>
             Kata Bandung berasal dari kata bendung atau bendungan karena
             terbendungnya sungai Citarum oleh lava Gunung Tangkuban Parahu yang
@@ -51,9 +55,13 @@
           </p>
         </article>
 
-        <article>
-          <h2 id="geografis">Geografis</h2>
-          <img src="assets/img/geografis.jpg" alt="foto sejarah" />
+        <article id="geografis" class="card">
+          <h2>Geografis</h2>
+          <img
+            src="assets/img/geografis.jpg"
+            alt="foto sejarah"
+            class="featured-image"
+          />
           <p>
             Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
             wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota
@@ -73,8 +81,8 @@
           </p>
         </article>
 
-        <article>
-          <h2 id="wisata">Wisata</h2>
+        <article id="wisata" class="card">
+          <h2>Wisata</h2>
           <p>
             Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi
             tujuan utama dalam menikmati liburan akhir pekan terutama dari
@@ -84,7 +92,11 @@
           </p>
           <section>
             <h3>Farm House Lembang</h3>
-            <img src="assets/img/farm-house.jpg" alt="foto sejarah" />
+            <img
+              src="assets/img/farm-house.jpg"
+              alt="foto sejarah"
+              class="featured-image"
+            />
             <p>
               Berada di jalur utama Bandung-Lembang, Farm House menjadi objek
               wisata yang tidak pernah sepi pengunjung. Selain karena letaknya
@@ -95,7 +107,11 @@
 
           <section>
             <h3>Observatorium Bosscha</h3>
-            <img src="assets/img/bosscha.jpg" alt="foto sejarah" />
+            <img
+              src="assets/img/bosscha.jpg"
+              alt="foto sejarah"
+              class="featured-image"
+            />
             <p>
               Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss,
               Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan
@@ -113,7 +129,7 @@
       </div>
 
       <aside>
-        <article class="profile">
+        <article class="profile card">
           <header>
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
