--- a/dasarPemrogramanWeb/WebDasar/index.html
+++ b/dasarPemrogramanWeb/WebDasar/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-      <div>
+      <div id="content">
         <article id="sejarah" class="card">
           <h2>Sejarah</h2>
           <img
