--- a/dasarPemrogramanWeb/landingPage_Dicoding/index.html
+++ b/dasarPemrogramanWeb/landingPage_Dicoding/index.html
@@ -7,9 +7,18 @@
 
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css" />
+
+    <!-- Font Awesome 5.15.4 -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <!-- header -->
+    <!-- ================header================ -->
     <header class="header">
       <div class="header__logo">
         <img
@@ -36,7 +45,54 @@
       </nav>
     </header>
 
-    <main>INi nanti isinya Konten lho . . .</main>
-    <!-- header end -->
+    <!-- ================main================ -->
+    <main class="main">
+      <div class="main__content content">
+        <div class="content__description">
+          <h1 class="content__title title">Dicoding Indonesia</h1>
+          <p class="content__text">
+            Kami yakin pendidikan teknologi adalah fondasi bagi setiap bangsa
+            agar menjadi yang terdepan dalam menghadapi dunia digital. Dicoding
+            hadir sebagai platform pendidikan teknologi yang membantu
+            menghasilkan talenta digital berstandar global. Semua demi
+            mengakselerasi Indonesia agar menjadi yang terdepan.
+          </p>
+          <button class="content__button">Lebih lanjut</button>
+        </div>
+        <div class="content__image">
+          <img
+            src="assets/image/circle-g.jpg"
+            alt="Dicoding Indonesia"
+            class="content__img"
+          />
+        </div>
+      </div>
+      <aside class="main__aside aside">
+        <div class="aside__social-media social-media">
+          <ul class="social-media__list">
+            <li class="social-media__item">
+              <a href="#" class="social-media__link"
+                ><i class="fab fa-youtube"></i
+              ></a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link"
+                ><i class="fab fa-facebook"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </aside>
+    </main>
   </body>
 </html>
