dasarPemrogramanWeb tugas-akhir navbar selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -15,6 +15,38 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    Percobaan test jenis Typography
+    <!-- ====== Home ======= -->
+    <header class="header">
+      <div class="header__nav nav">
+        <div class="nav__logo">
+          <img
+            src="assets/images/logo.svg"
+            alt="logo sunnyside"
+            class="nav__logo-img"
+          />
+        </div>
+        <nav class="nav__box">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">about</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">projects</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">services</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header__jumbotron jumbotron">
+        <div class="jumbotron__title">
+          <h1 class="heading-primary">we are creatives</h1>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
