dasarPemrogramanWeb jumbotron-selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -44,7 +44,14 @@
       </div>
       <div class="header__jumbotron jumbotron">
         <div class="jumbotron__title">
-          <h1 class="heading-primary">we are creatives</h1>
+          <h1 class="heading heading-primary">we are creatives</h1>
+        </div>
+        <div class="jumbotron__arrow">
+          <img
+            src="assets/images/icon-arrow-down.svg"
+            alt="arrow down"
+            class="jumbotron__arrow-img"
+          />
         </div>
       </div>
     </header>
