dasarpemrograman tugas-akhir edit pada bagian about--edit detail agar responsive

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <!-- ====== Home ======= -->
+    <!-- ====== Header ======= -->
     <header class="header">
       <div class="header__nav nav">
         <div class="nav__logo">
@@ -55,5 +55,55 @@
         </div>
       </div>
     </header>
+
+    <!-- ====== Main ======= -->
+    <main class="main">
+      <section class="about" id="about">
+        <article class="about__content-box">
+          <div class="about__card --transform">
+            <div class="card-content card-content--transform">
+              <div class="card-content__header">
+                <div class="card-content__header-image"></div>
+              </div>
+              <div class="card-content__detail">
+                <div class="card-content__detail-title">
+                  <h2 class="heading heading-secondary">
+                    Transform your brand
+                  </h2>
+                </div>
+                <p class="card-content__detail-paragraf">
+                  We are a full-service creative agency specializing in helping
+                  brands grow fast. Engage your clients through compelling
+                  visuals that do most of the marketing for you.
+                </p>
+                <a href="/" class="card-content__detail-link">Learn more</a>
+              </div>
+            </div>
+          </div>
+          <div class="about__card">
+            <div class="card-content card-content--standout">
+              <div class="card-content__header">
+                <div class="card-content__header-image"></div>
+              </div>
+              <div class="card-content__detail">
+                <div class="card-content__detail-title">
+                  <h2 class="heading heading-secondary">
+                    Stand out to the right audience
+                  </h2>
+                </div>
+                <p class="card-content__detail-paragraf">
+                  Using a collaborative formula of designers, researchers,
+                  photographers, videographers, and copywriters, we'll build and
+                  extend your brand in digital places.
+                </p>
+                <a href="/" class="card-content__detail-link">Learn more</a>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+      <section class="services"></section>
+      <section class="testimonial"></section>
+    </main>
   </body>
 </html>
