dasarpemrogramanweb tugas-akhir section services selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -60,7 +60,7 @@
     <main class="main">
       <section class="about" id="about">
         <article class="about__content-box">
-          <div class="about__card --transform">
+          <div class="about__card--transform">
             <div class="card-content card-content--transform">
               <div class="card-content__header">
                 <div class="card-content__header-image"></div>
@@ -71,7 +71,7 @@
                     Transform your brand
                   </h2>
                 </div>
-                <p class="card-content__detail-paragraf">
+                <p class="card-content__detail-paragraf paragraf">
                   We are a full-service creative agency specializing in helping
                   brands grow fast. Engage your clients through compelling
                   visuals that do most of the marketing for you.
@@ -91,7 +91,7 @@
                     Stand out to the right audience
                   </h2>
                 </div>
-                <p class="card-content__detail-paragraf">
+                <p class="card-content__detail-paragraf paragraf">
                   Using a collaborative formula of designers, researchers,
                   photographers, videographers, and copywriters, we'll build and
                   extend your brand in digital places.
@@ -102,7 +102,33 @@
           </div>
         </article>
       </section>
-      <section class="services"></section>
+      <section class="services" id="services">
+        <div class="services__box-content">
+          <div class="box-services box-services--graphicdesign">
+            <div class="box-services__container">
+              <div class="box-services__title">
+                <h3 class="heading heading-tersieary">graphic design</h3>
+              </div>
+              <p class="box-services__paragraf paragraf">
+                Graphic design Great design makes you memorable. We deliver
+                artwork that underscores your brand message and captures
+                potential clients attention.
+              </p>
+            </div>
+          </div>
+          <div class="box-services box-services--photography">
+            <div class="box-services__container">
+              <div class="box-services__title">
+                <h3 class="heading heading-tersieary">Photography</h3>
+              </div>
+              <p class="box-services__paragraf paragraf">
+                Increase your credibility by getting the most stunning,
+                high-quality photos that improve your business image.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="testimonial"></section>
     </main>
   </body>
