dasarpemrogramanweb tugas-akhir section testimonial selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -129,7 +129,60 @@
           </div>
         </div>
       </section>
-      <section class="testimonial"></section>
+      <section class="testimonial" id="testimonial">
+        <div class="testimonial__text-box">
+          <h3 class="heading heading-tersieary --testimonial">
+            client testimonials
+          </h3>
+        </div>
+        <div class="testimonial__content-box">
+          <div class="testimonial_card">
+            <div class="content-card">
+              <img
+                src="assets/images/image-emily.jpg"
+                alt=""
+                class="content-card__profile-picture"
+              />
+              <p class="content-card__text paragraf">
+                We put our trust in Sunnyside and they delivered, making sure
+                our needs were met and deadlines were always hit.
+              </p>
+              <p class="content-card__client-name">Emily R.</p>
+              <p class="content-card__client-job">Marketing Director</p>
+            </div>
+          </div>
+          <div class="testimonial_card">
+            <div class="content-card">
+              <img
+                src="assets/images/image-thomas.jpg"
+                alt=""
+                class="content-card__profile-picture"
+              />
+              <p class="content-card__text paragraf">
+                Sunnysides enthusiasm coupled with their keen interest in our
+                brands success made it a satisfying and enjoyable experience.
+              </p>
+              <p class="content-card__client-name">Thomas S.</p>
+              <p class="content-card__client-job">Chief Operating Officer</p>
+            </div>
+          </div>
+          <div class="testimonial_card">
+            <div class="content-card">
+              <img
+                src="assets/images/image-jennie.jpg"
+                alt=""
+                class="content-card__profile-picture"
+              />
+              <p class="content-card__text paragraf">
+                Incredible end result! Our sales increased over 400% when we
+                worked with Sunnyside. Highly recommended!
+              </p>
+              <p class="content-card__client-name">Jennie F.</p>
+              <p class="content-card__client-job">Business Owner</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
