dasarpemrogramanweb tugas-akhir section project selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -10,6 +10,12 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
       href="assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -183,6 +189,40 @@
           </div>
         </div>
       </section>
+      <section class="project" id="project">
+        <div class="project__content-box">
+          <div class="project-box">
+            <img
+              src="assets/images/desktop/image-gallery-milkbottles.jpg"
+              alt=""
+              class="project-box__image"
+            />
+          </div>
+          <div class="project-box">
+            <img
+              src="assets/images/desktop/image-gallery-orange.jpg"
+              alt=""
+              class="project-box__image"
+            />
+          </div>
+          <div class="project-box">
+            <img
+              src="assets/images/desktop/image-gallery-cone.jpg"
+              alt=""
+              class="project-box__image"
+            />
+          </div>
+          <div class="project-box">
+            <img
+              src="assets/images/desktop/image-gallery-sugarcubes.jpg"
+              alt=""
+              class="project-box__image"
+            />
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- ====== Footer ======= -->
+    <footer></footer>
   </body>
 </html>
