dasarpemrogramanweb tugas-akhir footer selesai

--- a/dasarPemrogramanWeb/tugas-akhir/index.html
+++ b/dasarPemrogramanWeb/tugas-akhir/index.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
@@ -223,6 +223,47 @@
       </section>
     </main>
     <!-- ====== Footer ======= -->
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__img-box">
+        <img src="assets/images/logo.svg" alt="" class="footer-logo" />
+      </div>
+      <div class="footer__menu-box">
+        <ul class="list">
+          <li class="list__item">
+            <a href="#about" class="list__item__link">about</a>
+          </li>
+          <li class="list__item">
+            <a href="#services" class="list__item__link">services</a>
+          </li>
+          <li class="list__item">
+            <a href="#project" class="list__item__link">project</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__social-box">
+        <ul class="social-media">
+          <li>
+            <a href="/"
+              ><img src="assets/images/icon-facebook.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="/"
+              ><img src="assets/images/icon-instagram.svg" alt="instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="/"
+              ><img src="assets/images/icon-twitter.svg" alt="twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="/"
+              ><img src="assets/images/icon-pinterest.svg" alt="pinterest"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
